--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -3,6 +3,10 @@
 
 @inject IViewLocalizer Localizer
 
+@{
+    ViewData["TourPageKey"] = "Stores/StoreDetails";
+}
+
 @*<link href="~/assets/plugins/c3/c3.min.css" rel="stylesheet" />*@
 <link href="~/assets/plugins/c3-0.7.20/c3.min.css" rel="stylesheet" />
 
@@ -45,8 +49,8 @@
         <div class="card">
             <div class="card-body p-4">
                 <div class="d-flex align-items-center justify-content-between">
-                    <h4 class="m-0">@Model.StoreName</h4>
-                    <div>
+                    <h4 class="m-0" data-tour="sd.departmentname">@Model.StoreName</h4>
+                    <div data-tour="sd.storeowner">
                         @Html.Raw(Model.StoreOwnerInfo)
                     </div>
                 </div>
@@ -58,7 +62,7 @@
     <div class="col-xl col-md-12">
         <a asp-area="Users" asp-controller="Assets" asp-action="Index"
            asp-route-id="@Model.StoreId" asp-route-subCategoryId="0">
-            <div class="card divShadow">
+            <div class="card divShadow" data-tour="sd.registered">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
@@ -80,7 +84,7 @@
     </div>
     <div class="col-xl col-md-12">
         <a asp-area="Users" asp-controller="Transfers" asp-action="ReceivedAssets" asp-route-id="@Model.StoreId">
-            <div class="card divShadow">
+            <div class="card divShadow" data-tour="sd.received">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
@@ -101,7 +105,7 @@
     </div>
     <div class="col-xl col-md-12">
         <a asp-area="Users" asp-controller="Transfers" asp-action="TransferredAssets" asp-route-id="@Model.StoreId">
-            <div class="card divShadow">
+            <div class="card divShadow" data-tour="sd.transfered">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
@@ -122,7 +126,7 @@
     </div>
     <div class="col-xl col-md-12">
         <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction">
-            <div class="card divShadow">
+            <div class="card divShadow" data-tour="sd.handover">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
@@ -143,7 +147,7 @@
     </div>
     <div class="col-xl col-md-12">
         <a asp-area="Users" asp-controller="Disposals" asp-action="Index">
-            <div class="card divShadow">
+            <div class="card divShadow" data-tour="sd.disposal">
                 <div class="card-body">
                     <div class="row">
                         <div class="col-7">
@@ -163,10 +167,10 @@
         </a>
     </div>
     <div class="col-xl col-md-12">
-        <div class="card divShadow">
+        <div class="card divShadow" data-tour="sd.balance">
             <div class="card-body">
                 <div class="row">
-                    <div class="col-7">
+                    <div class="col-7" >
                         <h6 class="text-bold text-muted">@Localizer["Balance"]</h6>
                         <span class="text-muted text-bold">@Model.GetBalance()</span>
                     </div>
@@ -201,13 +205,13 @@
                         }
                         <div class="mb-4">
                             <a asp-area="Users" asp-controller="Assets" asp-action="CreateAsset"
-                               asp-route-id="@Model.StoreId"
+                               asp-route-id="@Model.StoreId" data-tour="sd.register"
                                class="btn btn-info-gradient trShadow @sDisabled">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M16,11.5h-3.5V8c0-0.276123-0.223877-0.5-0.5-0.5S11.5,7.723877,11.5,8v3.5H8c-0.276123,0-0.5,0.223877-0.5,0.5s0.223877,0.5,0.5,0.5h3.5v3.5005493C11.5001831,16.2765503,11.723999,16.5001831,12,16.5h0.0006104C12.2765503,16.4998169,12.5001831,16.276001,12.5,16v-3.5H16c0.276123,0,0.5-0.223877,0.5-0.5S16.276123,11.5,16,11.5z M12,2C6.4771729,2,2,6.4771729,2,12s4.4771729,10,10,10c5.5202026-0.0062866,9.9937134-4.4797974,10-10C22,6.4771729,17.5228271,2,12,2z M12,21c-4.9705811,0-9-4.0294189-9-9s4.0294189-9,9-9c4.9682617,0.0056152,8.9943848,4.0317383,9,9C21,16.9705811,16.9705811,21,12,21z" /></svg>
                                 @Localizer["NewAsset"]
                             </a>
                         </div>
-                        <div class="table-responsive">
+                        <div class="table-responsive" data-tour="sd.summary">
                             <table id="tblCategories" class="table text-nowrap mb-0 table-bordered border-top border-bottom divShadow">
                                 <thead class="bg-primary-gradient ms-auto divShadow">
                                     <tr>
@@ -283,7 +287,7 @@
                         </div>
                     </div>
                     <div class="col-md-5 container">
-                        <div id="chart" class="mt-5"></div>
+                        <div id="chart" class="mt-5" data-tour="sd.chart"></div>
                     </div>
                 </div>
             </div>
@@ -385,6 +389,4 @@
             chart.toggle(id);
         }
     </script>
-
-
 }
